resource/theme/default/css/default.css
*, html {
	margin: 0px;
	padding:0px;
	font-family: "Helvetica Neue", HelveticaNeue, Helvetica, "Microsoft YaHei", "微软雅黑";
	text-rendering: optimizeLegibility;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

html {
	height: 100%;
    padding: 0px;
}

body {
	overflow-y: scroll;
	overflow-x: auto;
	height: 100%;
    padding: 0px;
}

a {
	text-decoration: none;
}
/* unset bs3 setting */
.modal-open {
	overflow: auto;
}

body.modal-open[style] {
	padding-right: 0px !important;
}

/*::-webkit-scrollbar {*/
	/*width: 3px;*/
	/*background: #fff;*/
	/*position: relative;*/
/*}*/

/*::-webkit-scrollbar-thumb {*/
	/*background: rgb(0, 171, 230);*/
	/*-webkit-border-radius: 2px;*/
	/*!*-webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 1);*!*/
/*}*/

/*::-webkit-scrollbar-corner {*/
	/*background: #fff;*/
/*}*/

/*::-webkit-scrollbar-track:horizontal {*/
	/*display: none;*/
/*}*/

.loading {
	/*display: none;*/
}

.loading img {
	width: 50px;
	height: 50px;
	position: relative;
	left: 50%;
	margin-left: -25px;
	margin-top: 100px;
	margin-bottom: 100px;
}

.green{
	color: #54ab99;
}

.font_color_333 {
	color: #333333;
}

.font_color_666{
	color: #666666;
}

.font_color_999{
	color: #999999;
}

.font_size_12{
	font-size: 12px;
}

.font_size_14 {
	font-size: 14px;
}

.font_size_16{
	font-size: 16px;
}

.float_left {
	float: left;
}

.float_right {
	float: right;
}

.notice {
	color: rgb(0, 171, 230);
}

.warning {
	color: rgb(255, 51, 153);
}

.error {
	color: red;
}

div.notice {
    color: rgb(0, 171, 230);
    background-color: rgb(217, 237, 247);
}

div.warning {
    color: rgb(243, 120, 52);
    background-color: rgb(252, 248, 227);
}

div.success {
    color: rgb(119, 184, 39);
    background-color: rgb(223, 240, 216);
}

div.error {
    color: rgb(255, 51, 153);
    background-color: rgb(242, 222, 222);
}

.btn-default, .btn-reset, .btn-submit{
	margin-top: 10px;
	padding: 10px 15px 10px 15px;
	color:#ffffff;
	border: none;
	margin-right: 15px;
	font-size: 16px;
	box-shadow: 1px 1px 2px #888888;
	cursor: pointer;
}

.btn-reset{
	background-color: rgb(255, 51, 153);
}

.btn-submit{
	background-color: rgb(0, 171, 230);
}

.border_bottom_grey{
	border-bottom: 1px solid #eeeeee;
}

/* shadow layer start*/

.baseLayer:before {
    content: '';
    display: inline-block;
    vertical-align: middle;
    height: 100%;
    background-color: red;
}

.baseLayer{
	width:100%;
	height:100%;
	z-index: 600;
	overflow-y: auto;
	position: fixed;
	color:#666666;
	font-size: 14px;
	line-height: 24px;
    text-align: center;
    vertical-align: middle;
}

.shadowLayer{
	overflow: hidden;
	width:100%;
	height: 100%;
	background-color: #000;
	z-index: 600;
	opacity: 0.8;
}


.blurred {
	-webkit-filter: blur(2px);
	-moz-filter: blur(2px);
	-o-filter: blur(2px);
	-ms-filter: blur(2px);
	filter: blur(2px);
}

#generalPopup{
	background-color: red;
	width: 200px;
	height: 700px;
	z-index: 700;
	position: fixed;
}

.shadowWrapper{
	width:100%;
	height:100%;
	z-index: 600;
	position: fixed;
	display: none;
}
/* shadow layer end*/

/* popup start*/
.closeBanner{
	width:100%;
	height:50px;
}

.closeButton{
	font-size: 22px;
	line-height: 40px;
	float: left;
	color: #ffffff;
	cursor: pointer;
	z-index:650;
}

.baseLayer #imgTitle{
	background:none;
	color: #ffffff;
	height:50px;
	line-height: 50px;
	font-size: 22px;
	padding-top:0px;
	padding-bottom: 0px;
}

.baseLayer input[type="text"]#imgTitle{
	font-size: 22px;
	line-height: 50px;
	color:#ffffff;
	border:0px;
	background:none;
	height: 50px;
	max-width: 450px;
	width: 85%;
}

.baseLayer input[type="text"]#imgTitle:focus{
    color: rgb(0, 171, 230);
}

#imgText textarea{
	margin-top: 10px;
	border: none;
	height:220px;
	width: 100%;
	color:#666666;
	font-size: 14px;
	line-height: 24px;
}

#imgBox #authorBox{
	text-align: right;
	position: absolute; 
	bottom: 10px;
	right: 25px;
	color: #ffffff;
	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
	font-size: 11px;
	line-height: 13px;
	z-index: 660;
	opacity: 0.5;
}

.popupImg{
	padding: 15px 30px 30px 30px;
	background-color: #f9f9f9;
	height: auto;
	width: 964px;
	/*margin-left: calc(50% - 512px);*/
	margin-left: calc(50% - 512px);
	text-align:  justify;
	
}

.smallPopup .ajaxNotice{
    width:100%;
    height: 30px;
    line-height: 30px;
    margin-bottom: 10px;
    border-top: 1px solid #eaeaea;
    border-bottom: 1px solid #eaeaea;
    display: none;
    text-align: center;
    vertical-align: middle;
}


.baseLayer .mainBox {

    margin-top:20px;
    margin-bottom: 20px;
    background-color: #f9f9f9;

    /*make div center, cooperate with parent*/

    vertical-align: middle;
    display: inline-block;
    /* for ie6/7: */
    *display: inline;
    zoom: 1;

    -moz-border-radius: 3px;
    -webkit-border-radius: 3px ;
    border-radius: 3px ;
}


.smallPopup .mainBox{
    height: auto;
    width:90%;
    max-width: 380px;
    text-align:  justify;
    padding: 0px;
}

.baseLayer .mainBox .titleBox {
    text-align: left;
	height: 50px;
	background-color: #f9f9f9;
}

.baseLayer .mainBox .titleBox h2 {
	line-height: 50px;
	margin-left: 30px;
	margin-top: 10px;
}

#rememberme {
	padding-top: 3px;
}

.registerFormBox input#remembermeChk{
	content: '';

	-moz-appearance:none;
	-webkit-appearance:none;
	-o-appearance:none;

	margin-top: 5px;
	margin-left: 30px;


	width:16px;
	height:16px;
	vertical-align: middle;

	color: #999999;
	border:1px solid #aaaaaa;
	-moz-border-radius: 3px;
	-webkit-border-radius: 3px ;
	border-radius: 3px ;
	display: inline-block;
}


.registerFormBox input#remembermeChk + label {
	width:16px;
	height:16px;
	display: inline-block;
	margin-left: -23px;
	font-size: 18px;
}

.registerFormBox input#remembermeChk:checked + label:after {
	content: attr(data-content) '\2714';
	color: rgb(0, 171, 230);
}
/* ... */

